# SEQ-CSQ-compressor

./: .gitignore  AGENTS.md  README.md  THERMAL_COMPRESSION_SPEC.md  environment.yml  pyproject.toml
SDK/: FileSDK-2024.7.1-cp312-cp312-win_amd64.whl
SDK/tutorial_scripts/: modify_parameters.py  setup.py
tests/: test_decoder.py  test_encoder.py  test_roundtrip.py
thermal_compress/: __init__.py  cli.py  compression.py  decoder.py  encoder.py  metadata.py  verify.py
